[package]
name = "ed25519_bip32_c_interface"
version = "0.1.0"
edition = "2018"
authors = ["Dario Rekowski <dario.rekowski@gmx.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
ed25519-bip32 = "0.4.0"
cryptoxide = "0.3.3"

